<resources>
    <string name="app_name">Brewing Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name_formatted">Brewing Calculator</string>
    <string name="extract_conversion_calculator">Plato/Brix/SG Conversion Calculator</string>
    <string name="alcohol_calculator">Alcohol Calculator</string>
    <string name="incorrect_value">Incorrect value</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="choose_default_extract_unit">Choose default gravity unit: </string>
    <string name="choose_default_language">Choose default language: </string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="brix" translatable="false">Brix</string>
    <string name="sg" translatable="false">SG</string>
    <string name="plato" translatable="false">Plato</string>
    <string name="zero_value" translatable="false">0.00</string>
    <string name="one_value" translatable="false">1.00</string>
    <string name="email_address" translatable="false">bartosz.lampart@gmail.com</string>

    <string name="lbl_after_fermentation">Final gravity</string>
    <string name="lbl_calculated_fg">Calculated final gravity</string>
    <string name="lbl_alcohol">Alcohol</string>
    <string name="lbl_always_use_refractometer">Always use refractometer</string>
    <string name="lbl_attenuation">Attenuation</string>
    <string name="lbl_beer_temp">Beer temperature</string>
    <string name="lbl_before_fermentation">Measured original gravity</string>
    <string name="lbl_co2_volumes">Volumes of CO2</string>
    <string name="lbl_priming_size">Priming size</string>
    <string name="lbl_current_size">Current size</string>
    <string name="lbl_default_priming_size">Default priming size</string>
    <string name="lbl_priming_sugar">Priming sugar</string>
    <string name="lbl_priming_sugar_type">Priming sugar type</string>
    <string name="lbl_priming_sugar_amount">Priming sugar amount</string>
    <string name="lbl_use_refractometer">Use refractometer</string>
    <string name="lbl_wort_correction_factor">Wort correction factor</string>
    <string name="lbl_wort_correction_factor_default_value" translatable="false">1.04</string>
    <string name="lbl_carbonation_guidelines">Carbonation guidelines</string>
    <string name="lbl_style_british_ales" translatable="false">British Ale</string>
    <string name="lbl_style_belgian_ales" translatable="false">Belgian Ales</string>
    <string name="lbl_style_american_styles" translatable="false">Lager/American Ale</string>
    <string name="lbl_style_fruit_lambic" translatable="false">Fruit Lambic</string>
    <string name="lbl_style_porter_stout" translatable="false">Porter, Stout</string>
    <string name="lbl_style_european_lagers" translatable="false">European Lagers</string>
    <string name="lbl_style_lambic" translatable="false">Lambic</string>
    <string name="lbl_style_german_wheat_beer" translatable="false">German Wheat</string>
    <string name="lbl_style_british_ales_val" translatable="false">1.5 - 2.0 volumes</string>
    <string name="lbl_style_belgian_ales_val" translatable="false">1.9 - 2.4 volumes</string>
    <string name="lbl_style_american_styles_val" translatable="false">2.2 - 2.7 volumes</string>
    <string name="lbl_style_fruit_lambic_val" translatable="false">3.0 - 4.5 volumes</string>
    <string name="lbl_style_porter_stout_val" translatable="false">1.7 - 2.3 volumes</string>
    <string name="lbl_style_european_lagers_val" translatable="false">2.2 - 2.7 volumes</string>
    <string name="lbl_style_lambic_val" translatable="false">2.4 - 2.8 volumes</string>
    <string name="lbl_style_german_wheat_beer_val" translatable="false">3.3 - 4.5 volumes</string>
    <string name="lbl_yeast_needed">Yeast amount needed</string>
    <string name="lbl_dry_yeast_needed">Grams dry yeast needed</string>
    <string name="lbl_slurry_yeast_needed">Mililiters slurry needed</string>
    <string name="lbl_beer_style">Beer style</string>
    <string name="lbl_beer_style_ale" translatable="false">Ale</string>
    <string name="lbl_beer_style_lager" translatable="false">Lager</string>
    <string name="lbl_harvest_date">Harvest date</string>
    <string name="lbl_production_date">Production date</string>
    <string name="lbl_liquid_yeast_needed">Liquid yeast packs needed</string>
    <string name="lbl_starter_size">Starter size</string>
    <string name="lbl_choose_formula">Choose formula</string>
    <string name="lbl_formula_normal">Standard</string>
    <string name="lbl_formula_alternative">Alternative</string>
    <string name="lbl_add_hop">Add hop</string>
    <string name="lbl_no_hops_added">No hops added</string>
    <string name="lbl_estimated_ibu_rager">Estimated IBU (Rager method): </string>
    <string name="lbl_estimated_ibu_tinseth">Estimated IBU (Tinseth method): </string>
    <string name="lbl_alpha_acids">Alpha acids</string>
    <string name="lbl_boiling_time">Boiling time</string>
    <string name="lbl_hop_weight">Hop weight</string>
    <string name="lbl_boiling_size">Boiling size</string>
    <string name="lbl_weight_unit">Weight unit</string>
    <string name="lbl_hop_type">Hop type</string>
    <string name="lbl_minutes">minutes</string>
    <string name="lbl_report_issue">Report issue</string>
    <string name="lbl_expected_gravity">Expected gravity</string>
    <string name="lbl_additional_water">Additional water</string>


    <string name="title_extract_calculator">Gravity Units Calculator</string>
    <string name="title_alcohol_calculator">Alcohol Calculator</string>
    <string name="title_carbonation_calculator">Carbonation Calculator</string>
    <string name="title_yeasts_amount_calculator">Yeast Amount Calculator</string>
    <string name="title_hydrometer_adjustment" translatable="false">Hydrometer temperature adjustment</string>
    <string name="title_ibu_calculator">IBU Calculator</string>
    <string name="title_gravity_correction">Gravity correction</string>

    <string name="title_yeasts_dry">Dry yeast</string>
    <string name="title_yeasts_liquid">Liquid yeast</string>
    <string name="title_yeasts_slurry">Slurry</string>

    <string name="description_extract_calculator">Calculate gravity unit values - SG,Brix,Plato converter</string>
    <string name="description_alcohol_calculator">Calculate alcohol by value within a beer</string>
    <string name="description_carbonation_calculator">Calculate sugar amount to the carbonation</string>
    <string name="description_yeasts_amount_calculator">Calculate amount of yeasts for your beer</string>
    <string name="description_hydrometer_adjustment" translatable="false">Measure SG by hydrometer with temperature adjustment</string>
    <string name="description_ibu_calculator">Calculate IBU</string>
    <string name="description_gravity_correction">Calculate how much water or malt extract should add to achieve expected gravity</string>

    <string name="liquid_extract">of liquid extract</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="lbl_estimated_ibu">Estimated IBU:</string>
    <string name="dry_extract">of dry extract</string>
    <string name="corn_sugar">of corn sugar</string>
    <string name="table_sugar">of table sugar</string>
    <string name="lbl_have_to_add">You have to add</string>
    <string name="lbl_of_water">of water</string>
    <string name="lbl_or">or</string>
    <string name="lbl_cap_or">OR</string>
    <string name="lbl_expected_size">Expected size</string>
    <string name="lbl_current_gravity">Current gravity</string>
    <string name="lbl_size">Size</string>
    <string name="lbl_gravity">Gravity</string>
    <string name="what_expect">What do you expect?</string>
    <string name="lbl_after_evaporation">After evaporation</string>
    <string name="lbl_after_adding_water">After adding water</string>
</resources>
