<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight">

    <TextView
        style="@style/StyleTextView_DialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_default_extract_unit" />

                <Spinner
                    android:id="@+id/spinner_choose_default_extract_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/extract_units"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_settings_cancel"
                    android:text="@string/cancel"
                    style="@style/StyleButton_HalfButton"/>

                <View android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="@color/colorPrimaryLight"></View>
                <Button
                    android:id="@+id/btn_settings_save"
                    android:text="@string/save"
                    style="@style/StyleButton_HalfButton"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>